--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
 	"main": "electron/main.js",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/KevinRoebert/community-edition.git"
+		"url": "https://github.com/LibreRambox/community-edition.git"
 	},
 	"bugs": {
-		"url": "https://github.com/KevinRoebert/community-edition/issues"
+		"url": "https://github.com/LibreRambox/community-edition/issues"
 	},
-	"homepage": "https://github.com/KevinRoebert/community-edition",
+	"homepage": "https://github.com/LibreRambox/community-edition",
 	"keywords": [
 		"Rambox",
 		"messaging",
@@ -25,7 +25,7 @@
 		"hangouts",
 		"skype"
 	],
-	"author": "KR <28713602+KevinRoebert@users.noreply.github.com>",
+	"author": "LR <LibreRambox@users.noreply.github.com>",
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "electron electron/main.js",
