--- a/app.json
+++ b/app.json
@@ -103,9 +103,9 @@
 		{
             "path": "${framework.dir}/build/ext-all-rtl.js"
         },
-        {
-            "path": "resources/js/GALocalStorage.js"
-        },
+        // {
+        //     "path": "resources/js/GALocalStorage.js"
+        // },
         {
             "path": "resources/js/loadscreen.js"
         },
