--- a/package.json
+++ b/package.json
@@ -205,18 +205,19 @@
 		}
 	},
 	"devDependencies": {
-		"asar": "^3.1.0",
+		"@electron/asar": "^3.1.0",
 		"chai": "3.5.0",
 		"csvjson": "4.3.3",
-		"electron": "^13.6.0",
+		"electron": "^14.2.0",
 		"electron-builder": "^24.2.0",
 		"electron-packager": "15.5.1",
 		"mocha": "^10.2.0"
 	},
 	"dependencies": {
+		"@electron/remote": "^2.0.1",
 		"@exponent/electron-cookies": "2.0.0",
 		"auto-launch-patched": "5.0.2",
-		"electron-contextmenu-wrapper": "git+https://github.com/ramboxapp/electron-contextmenu-wrapper.git",
+		"electron-context-menu": "^3.1.1",
 		"electron-is-dev": "1.2.0",
 		"electron-log": "4.3.0",
 		"electron-store": "6.0.1",
