--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "Rambox",
 	"productName": "Rambox",
-	"version": "0.8.1",
+	"version": "0.8.1-fix-vulns",
 	"description": "Free and Open Source messaging and emailing app that combines common web applications into one.",
 	"main": "electron/main.js",
 	"engines": {
@@ -71,9 +71,9 @@
 		"productName": "Rambox",
 		"appId": "com.grupovrs.ramboxce",
 		"asar": true,
-		"electronVersion": "13.6.3",
+		"electronVersion": "24.1.2",
 		"electronDownload": {
-			"version": "13.6.3"
+			"version": "24.1.2"
 		},
 		"mac": {
 			"category": "public.app-category.productivity",
@@ -165,36 +165,31 @@
 				{
 					"target": "AppImage",
 					"arch": [
-						"x64",
-						"ia32"
+						"x64"
 					]
 				},
 				{
 					"target": "deb",
 					"arch": [
-						"x64",
-						"ia32"
+						"x64"
 					]
 				},
 				{
 					"target": "rpm",
 					"arch": [
-						"x64",
-						"ia32"
+						"x64"
 					]
 				},
 				{
 					"target": "zip",
 					"arch": [
-						"x64",
-						"ia32"
+						"x64"
 					]
 				},
 				{
 					"target": "tar.gz",
 					"arch": [
-						"x64",
-						"ia32"
+						"x64"
 					]
 				}
 			]
@@ -205,28 +200,26 @@
 		}
 	},
 	"devDependencies": {
-		"@electron/asar": "^3.1.0",
-		"chai": "3.5.0",
-		"csvjson": "4.3.3",
-		"electron": "^14.2.0",
+		"@electron/asar": "^3.2.0",
+		"electron": "^24.1.0",
 		"electron-builder": "^24.2.0",
-		"electron-packager": "15.5.1",
+		"@electron/rebuild": "^3.2.12",
+		"electron-packager": "^17.1.0",
 		"mocha": "^10.2.0"
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.1",
 		"@exponent/electron-cookies": "2.0.0",
-		"auto-launch-patched": "5.0.2",
+		"auto-launch": "^5.0.5",
 		"electron-context-menu": "^3.1.1",
-		"electron-is-dev": "1.2.0",
-		"electron-log": "4.3.0",
-		"electron-store": "6.0.1",
-		"electron-updater": "4.5.2",
-		"is-online": "8.2.0",
+		"electron-is-dev": "^2.0.0",
+		"electron-store": "^8.1.0",
+		"electron-updater": "^5.3.0",
+		"is-online": "^9.0.0",
 		"mime": "2.3.1",
 		"mousetrap": "1.6.3",
 		"rimraf": "2.6.1",
-		"tmp": "0.0.28"
+		"tmp": "^0.2.0"
 	},
 	"volta": {
 		"node": "18.16.0"
