Fix MasterPassword & context menu

--- a/Dockerfile.sencha
+++ b/Dockerfile.sencha
@@ -21,3 +21,5 @@ ENTRYPOINT [ "/opt/Sencha/Cmd/sencha" ]
 # docker build -f Dockerfile.sencha -t sencha-cmd:6.6.0 .
 
 # docker run --rm -v $(pwd):/app -v $(pwd)/../rambox-build-docker:/rambox-build -w /app sencha-cmd:6.6.0 app build
+
+# docker run --rm -v $(pwd):/app -v $(pwd)/../rambox-build-docker:/rambox-build -w /app sencha-cmd:6.6.0 app watch
