--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
           path: .
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.16.0
+          node-version: lts/hydrogen
       - run: npm i
 
       # Build Linux
