--- a/.github/config.yml
+++ b/.github/config.yml
@@ -11,7 +11,7 @@ newPRWelcomeComment: >
 # Configuration for first-pr-merge - https://github.com/behaviorbot/first-pr-merge
 # Comment to be posted to on pull requests merged by a first time user
 firstPRMergeComment: >
-  Congrats on merging your first pull request! We here at Rambox are proud of you!
+  Congrats on merging your first pull request! We here at LibreRambox are proud of you!
 
 
 
