--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build rambox
+name: Build LibreRambox
 on:
   workflow_dispatch: {}
   push:
@@ -28,7 +28,7 @@ jobs:
       - run: /tmp/SenchaCmd-6.6.0.13-linux-amd64.sh -q -Dall=true -dir /opt/Sencha/Cmd/6.6.0.13
 
       - name: Customizing the Sencha's output dir
-        run: sed -i.bak 's/..\/rambox-build/rambox-build/' app.json
+        run: sed -i.bak 's/..\/librerambox-build/librerambox-build/' app.json
 
       - name: Build Sencha app
         run: /opt/Sencha/Cmd/sencha app build
@@ -36,8 +36,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/rambox-build
-          name: rambox-build
+          path: ${{ github.workspace }}/librerambox-build
+          name: librerambox-build
 
   build:
     needs: sencha
@@ -61,7 +61,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: rambox-build
+          name: librerambox-build
           path: .
       - uses: actions/setup-node@v3
         with:
@@ -76,43 +76,43 @@ jobs:
       - name: LINUX Publish zip x64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-linux-x64.zip
-          name: Rambox-linux-x64.zip
+          path: ${{ github.workspace }}/dist/LibreRambox-*-linux-x64.zip
+          name: LibreRambox-linux-x64.zip
         if: matrix.job_name == 'linux'
 
       - name: LINUX Publish tar.gz x64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-linux-x64.tar.gz
-          name: Rambox-linux-x64.tar.gz
+          path: ${{ github.workspace }}/dist/LibreRambox-*-linux-x64.tar.gz
+          name: LibreRambox-linux-x64.tar.gz
         if: matrix.job_name == 'linux'
 
       - name: LINUX Publish deb amd64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-linux-amd64.deb
-          name: Rambox-linux-amd64.deb
+          path: ${{ github.workspace }}/dist/LibreRambox-*-linux-amd64.deb
+          name: LibreRambox-linux-amd64.deb
         if: matrix.job_name == 'linux'
 
       - name: LINUX Publish AppImage x64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-linux-x86_64.AppImage
-          name: Rambox-linux-x86_64.AppImage
+          path: ${{ github.workspace }}/dist/LibreRambox-*-linux-x86_64.AppImage
+          name: LibreRambox-linux-x86_64.AppImage
         if: matrix.job_name == 'linux'
 
       - name: LINUX Publish snap x64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-linux-amd64.snap
-          name: Rambox-linux-x86_64.snap
+          path: ${{ github.workspace }}/dist/LibreRambox-*-linux-amd64.snap
+          name: LibreRambox-linux-x86_64.snap
         if: matrix.job_name == 'linux'
 
       - name: LINUX Publish rpm x86_64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-linux-x86_64.rpm
-          name: Rambox-linux-x86_64.rpm
+          path: ${{ github.workspace }}/dist/LibreRambox-*-linux-x86_64.rpm
+          name: LibreRambox-linux-x86_64.rpm
         if: matrix.job_name == 'linux'
 
       - name: LINUX Publish yml
@@ -130,22 +130,22 @@ jobs:
       - name: OSX Publish zip
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-mac-universal.zip
-          name: Rambox-mac-universal.zip
+          path: ${{ github.workspace }}/dist/LibreRambox-*-mac-universal.zip
+          name: LibreRambox-mac-universal.zip
         if: matrix.job_name == 'osx'
 
       - name: OSX Publish dmg
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-mac-universal.dmg
-          name: Rambox-mac-universal.dmg
+          path: ${{ github.workspace }}/dist/LibreRambox-*-mac-universal.dmg
+          name: LibreRambox-mac-universal.dmg
         if: matrix.job_name == 'osx'
 
       - name: OSX Publish blockmap
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-mac-universal.dmg.blockmap
-          name: Rambox-mac-universal.dmg.blockmap
+          path: ${{ github.workspace }}/dist/LibreRambox-*-mac-universal.dmg.blockmap
+          name: LibreRambox-mac-universal.dmg.blockmap
         if: matrix.job_name == 'osx'
 
       - name: OSX Publish yml
@@ -163,29 +163,29 @@ jobs:
       - name: WIN Publish exe
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-win.exe
-          name: Rambox-win.exe
+          path: ${{ github.workspace }}/dist/LibreRambox-*-win.exe
+          name: LibreRambox-win.exe
         if: matrix.job_name == 'win'
 
       - name: WIN Publish zip x64
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-win-x64.zip
-          name: Rambox-win-x64.zip
+          path: ${{ github.workspace }}/dist/LibreRambox-*-win-x64.zip
+          name: LibreRambox-win-x64.zip
         if: matrix.job_name == 'win'
 
       - name: WIN Publish zip ia32
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-win-ia32.zip
-          name: Rambox-win-ia32.zip
+          path: ${{ github.workspace }}/dist/LibreRambox-*-win-ia32.zip
+          name: LibreRambox-win-ia32.zip
         if: matrix.job_name == 'win'
 
       - name: WIN Publish blockmap
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/Rambox-*-win.exe.blockmap
-          name: Rambox-win.exe.blockmap
+          path: ${{ github.workspace }}/dist/LibreRambox-*-win.exe.blockmap
+          name: LibreRambox-win.exe.blockmap
         if: matrix.job_name == 'win'
 
       - name: WIN Publish yml
