--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,12 +14,12 @@ init:
 install:
   - ps: Update-NodeJsInstallation $env:nodejs_version x64
   - cmd: >-
-      git clone https://github.com/saenzramiro/rambox-build.git %APPVEYOR_BUILD_FOLDER%\build\production\Rambox\
+      git clone https://github.com/LibreRambox/community-edition.git %APPVEYOR_BUILD_FOLDER%\build\production\LibreRambox\
 
-      cd %APPVEYOR_BUILD_FOLDER%\build\production\Rambox\
+      cd %APPVEYOR_BUILD_FOLDER%\build\production\LibreRambox\
 
       npm install
 build_script:
-  - cmd: cd %APPVEYOR_BUILD_FOLDER%\build\production\Rambox\
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%\build\production\LibreRambox\
   - cmd: npm run build:win
 test: off
