--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
 		"all:win": "npm run sencha:clean && npm run sencha:compile && npm run clean:win && npm run pack:win && npm run zip:win32 && npm run zip:win64 && npm run build:win",
 		"all:linux": "npm run sencha:clean && npm run sencha:compile && npm run build:linux",
 		"translations:download": "node languages.js download",
-		"translations:generate": "node languages.js generate"
+		"translations:generate": "node languages.js generate",
+		"generate-services": "node generate-services.js"
 	},
 	"build": {
 		"productName": "LibreRambox",
